--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 /* background color for the default page background (make sure font colors have good contrast and are readable on this background) */
 /* A different background color for elements such boxes and tables (so make sure the font colors contrast against this well, too!) */
 /* Anything else you’d like to add related to style. But remember: simplicity, clarity, and consistency are good things in design. */
+/* like to see these numbers with nice formatting in a web application. */
