--- a/style.css
+++ b/style.css
@@ -22,8 +22,16 @@ header {
   }
 
 #logo {
-  display: inline-block;
-  margin: 0%;
+  display: block;
+  margin: 0%;  
+}
+
+main img:first-of-type {
+  width: 100%;
+}
+
+header img {
+  height: 100%;
 }
 
 #title {
@@ -35,6 +43,7 @@ header {
   margin: 0%;
   color: azure;
   font-size: 70px;
+  min-width: 550px;
 
 }
 
@@ -65,22 +74,47 @@ article.about_us {
 #mid {
   padding: 0px;
   display: flex;
+  height: 400px;
 }
 
 article.hours {
-  background-image: repeating-linear-gradient(to bottom right, black, darkblue, rgb(70, 70, 70));
+  background-image: linear-gradient(to right, black, darkblue);
   color: white;
   display: inline-block;
-  width: 20%;
+  width: 30%;
   margin: 0px 0px 0px 5%;
+  height: 300px;
+  
 }
 
 article.location{
-  background-image: repeating-radial-gradient(green, darkolivegreen);
+  background-image: linear-gradient(to right,darkblue, black);
   color: aliceblue;
   display: inline-block;
-  width: 10%;
-  margin: 0px 0px 0px 0px;
+  width: 200px;
+  margin: 0px 0px 9% 0px;
+  align-content: center;
+  
+  
+}
+
+.cutter {
+  display: flex;
+  width: 50%;
+  margin-top: 0px;
+  height: 100%;
+  overflow: hidden;
+  }
+
+article figure {
+  display: inline-block;
+  width: 45%;
+  margin-top: 0px;
+}
+
+
+.shirt {
+  display: inline-block;
   
 }
 
@@ -95,6 +129,7 @@ ul {
 
 ul.days {
   display: inline-block;
+  width: 30%;
 }
 
 ul.time {
